--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,21 +1,20 @@
-# The id and meta of the item:
-id: "445:0"
+# l id de l'objet la cest une larme de ghast:
+id: "370:0"
 
-# Message position (popup, tip or title):
+# Identifiants : (popup, tip ou title):
 message-position: "popup"
 
 # Messages:
- # {chestCount} to indicate the number of vaults around the player.
- # {chestDistance} to indicate the distance between player and the chest.
- # {lineBreak} to make a line break.
-no-chest: "§cNo chest around you"
-chest-detected: "§aThere are {chestCount} chest(s) near you...{lineBreak}The closest chest near you is at {chestDistance} blocks !"
+ # {chestCount} nombre de coffre.
+ # {chestDistance} distance du coffre le plus proche du joueur.
+ # {lineBreak} Pour faire une ligne en dessous.
+no-chest: "§aucun coffre vers vous..."
+chest-detected: "§aIl y a {chestCount} {lineBreak} le plus prêt est a  {chestDistance} block !"
 
-# The radius of detection:
+# La distance de détection en block:
 radius: 70
 
-# The time between each search in seconds (the lower it is, the more risk there is of lag; Recommanded: 3):
 repeat: 1
 
-# Plugin's version, please don't touch it !
+# Version de plugins, TOUCHE Y PAS !!!!!
 version: "1.5"
